--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LotecaDaSorte">
-        <activity android:name=".ui.Splashscreen"
-            android:exported="true">
+        <activity android:name="br.fernando.lotecadasorte.ui.view.listaloterias.ListaLoterias"></activity>
+        <activity
+            android:name=".ui.view.main.Splashscreen"
+            android:exported="true"
+            android:theme="@style/TelaCheia">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.MainActivity">
-        </activity>
+        <activity android:name=".ui.view.main.MainActivity"></activity>
     </application>
 
 </manifest>
