--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LotecaDaSorte">
-        <activity android:name="br.fernando.lotecadasorte.ui.view.listaloterias.ListaLoterias"></activity>
+        <activity android:name=".ui.view.resultado.LoteriaResultadoActivity"/>
+        <activity android:name=".ui.view.maischance.LoteriaMaisChanceActivity" />
+        <activity android:name=".ui.view.listaloterias.ListaLoterias" />
         <activity
             android:name=".ui.view.main.Splashscreen"
             android:exported="true"
@@ -20,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.view.main.MainActivity"></activity>
+        <activity android:name=".ui.view.main.MainActivity" />
     </application>
 
 </manifest>
