adicionando dados mock

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.LotecaDaSorte">
         <activity android:name=".ui.view.resultado.LoteriaResultadoActivity"/>
         <activity android:name=".ui.view.maischance.LoteriaMaisChanceActivity" />
-        <activity android:name=".ui.view.listaloterias.ListaLoterias" />
+        <activity android:name=".ui.view.listaloterias.LoteriasLista" />
         <activity
             android:name=".ui.view.main.Splashscreen"
             android:exported="true"
